--- a/app/src/main/res/layout/cardentry.xml
+++ b/app/src/main/res/layout/cardentry.xml
@@ -191,7 +191,25 @@
                             android:paddingLeft="10dp"/>
 
                     </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="18dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginTop="5dp">
 
+                        <View
+                            android:layout_width="15dp"
+                            android:layout_height="match_parent"
+                            android:background="#ffffff"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Neutral"
+                            android:textColor="@color/white"
+                            android:paddingLeft="10dp"/>
+
+                    </LinearLayout>
                 </LinearLayout>
 
             </LinearLayout>
