--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -34,54 +34,24 @@
         android:textStyle="bold"
         android:padding="@dimen/book_padding"
         android:layout_gravity="center"/>
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:background="@drawable/textborder"
-        android:hint="ENTER EMAIL"
-        android:drawableLeft="@drawable/ic_baseline_email_24"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:padding="10dp"
-        android:layout_gravity="center"
-        android:textColorHint="@color/white"
-        />
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:drawableLeft="@drawable/ic_baseline_lock_24"
-        android:background="@drawable/textborder"
-        android:hint="ENTER PASSWORD"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:padding="10dp"
-        android:layout_gravity="center"
-        android:textColorHint="@color/white"
-        />
-
     <Button
-        android:id="@+id/loginbut"
-        android:layout_width="150dp"
-        android:layout_marginTop="20dp"
-        android:layout_height="wrap_content"
+        android:id="@+id/sign_in_btn"
+        android:layout_width="176dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="72dp"
         android:background="@drawable/buttons"
-        app:backgroundTint="@color/white"
+        android:drawableLeft="@drawable/ic_google_icon"
+        android:paddingLeft="15dp"
+        android:text="GOOGLE"
         android:textColor="#000000"
+        android:textSize="18sp"
+        app:backgroundTint="#FFFFFF"
         android:layout_gravity="center"
-        android:text="LOGIN"/>
-
-    <TextView
-        android:id="@+id/gotoreg"
-        android:layout_width="wrap_content"
-        android:layout_height="55dp"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center"
-        android:text="DON'T HAVE AN ACCOUNT? REGISTER HERE"
-        android:textColor="#FFFFFF"
-/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.523"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:rippleColor="#7E7E7E" />
 
 </LinearLayout>
