--- a/app/src/main/res/layout/cardentry.xml
+++ b/app/src/main/res/layout/cardentry.xml
@@ -39,7 +39,7 @@
 
 
 
-            <TextView
+            <EditText
                 android:id="@+id/texts"
                 android:textSize="18sp"
                 android:layout_marginTop="15dp"
@@ -51,6 +51,7 @@
                 android:textColor="@color/white"
                 android:fontFamily="@font/abel"
                 android:text="hello"
+                android:enabled="false"
                 android:maxLines="2"
                 tools:ignore="MissingConstraints" />
 
@@ -242,7 +243,7 @@
 
             <TextView
                 android:id="@+id/edit"
-                android:layout_width="90dp"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:background="@drawable/gradients"
@@ -253,6 +254,21 @@
                 android:text="EDIT"
                 tools:ignore="MissingConstraints"
                 android:gravity="center_horizontal" />
+            <TextView
+                android:id="@+id/save"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:background="@drawable/gradients"
+                android:layout_toLeftOf="@+id/del"
+                android:padding="5dp"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold"
+                android:text="SAVE"
+                tools:ignore="MissingConstraints"
+                android:gravity="center_horizontal" />
+
+
 
             <TextView
                 android:id="@+id/stats"
