--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -11,13 +11,15 @@
         android:layout_width="147dp"
         android:layout_height="148dp"
         android:layout_gravity="center"
-        android:layout_margin="20dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/textborder"
         android:src="@drawable/ic_logo"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="APP NAME"
+        android:text="UnKshipta"
+        android:textStyle="bold"
+        android:layout_marginTop="50dp"
         android:fontFamily="@font/amatica_sc"
         android:textColor="@color/white"
         android:layout_gravity="center"
@@ -26,19 +28,32 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="SPEAK. REFLECT. UNDERSTAND. HEAL."
+        android:layout_marginTop="50dp"
+        android:textStyle="bold"
+        android:fontFamily="@font/amatica_sc"
+        android:textColor="@color/white"
+        android:layout_gravity="center"
+        android:textSize="25dp"
+        />
+    <TextView
+        android:layout_width="300dp"
+        android:gravity="center_horizontal"
+        android:layout_height="wrap_content"
         android:background="@drawable/gradheads"
         android:text="WELCOME! LOGIN HERE"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginTop="70dp"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:padding="@dimen/book_padding"
         android:layout_gravity="center"/>
+
     <Button
         android:id="@+id/sign_in_btn"
         android:layout_width="176dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="72dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
         android:background="@drawable/buttons"
         android:drawableLeft="@drawable/ic_google_icon"
         android:paddingLeft="15dp"
@@ -46,7 +61,6 @@
         android:textColor="#000000"
         android:textSize="18sp"
         app:backgroundTint="#FFFFFF"
-        android:layout_gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.523"
