--- a/app/src/main/res/layout/cardentry.xml
+++ b/app/src/main/res/layout/cardentry.xml
@@ -44,6 +44,8 @@
                 android:textSize="18sp"
                 android:layout_marginTop="15dp"
                 android:padding="10dp"
+                android:enabled="false"
+                android:ellipsize="end"
                 android:layout_below="@id/textViewTitle"
                 android:layout_width="match_parent"
                 android:background="@drawable/textborder2"
@@ -51,15 +53,23 @@
                 android:textColor="@color/white"
                 android:fontFamily="@font/abel"
                 android:text="hello"
-                android:enabled="false"
                 android:maxLines="2"
-                tools:ignore="MissingConstraints" />
+                tools:ignore="MissingConstraints">
+            </EditText>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:id="@+id/arr"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_baseline_arrow_drop_down_24"
+            android:layout_below="@id/texts"
+/>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardViewGraph"
             android:layout_width="match_parent"
             android:layout_height="240dp"
-            android:layout_below="@id/texts"
+            android:layout_below="@id/arr"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="15dp"
@@ -229,7 +239,7 @@
 
             <TextView
                 android:id="@+id/del"
-                android:layout_width="90dp"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_margin="5dp"
@@ -272,7 +282,7 @@
 
             <TextView
                 android:id="@+id/stats"
-                android:layout_width="90dp"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:background="@drawable/gradhin"
