--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -51,8 +51,9 @@
     <Button
         android:id="@+id/sign_in_btn"
         android:layout_width="176dp"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:layout_gravity="center"
+        android:fontFamily="@font/abel"
         android:layout_marginTop="50dp"
         android:background="@drawable/buttons"
         android:drawableLeft="@drawable/ic_google_icon"
