--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -17,7 +17,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="UnKshipta"
+        android:text="Unक्षिप्त"
         android:textStyle="bold"
         android:layout_marginTop="50dp"
         android:fontFamily="@font/amatica_sc"
